[25/5] auth/change-path-api for JWT